style: format all test code files - apply consistent formatting across all test source files - unify code style according to project guidelines